objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>BIA</fullName>
        <description>Venta de Producto BIA. Intervienen Ejecutivos de Cuenta e Inversión simultáneamente</description>
        <isActive>true</isActive>
        <values>
            <fullName>Calificación</fullName>
        </values>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Contacto</fullName>
        </values>
        <values>
            <fullName>Otorgamiento</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Empresas y Corporaciones</fullName>
        <description>División empresas y División corporaciones</description>
        <isActive>true</isActive>
        <values>
            <fullName>Aprobación</fullName>
        </values>
        <values>
            <fullName>Calificación</fullName>
        </values>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Contacto</fullName>
        </values>
        <values>
            <fullName>Estudio</fullName>
        </values>
        <values>
            <fullName>Negociación</fullName>
        </values>
        <values>
            <fullName>Otorgamiento</fullName>
        </values>
        <values>
            <fullName>Precalificación</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inversión Alto Patrimonios</fullName>
        <description>Proces de Inversión. Utilizado por Ejecutivos inversiones AP</description>
        <isActive>true</isActive>
        <values>
            <fullName>Calificación</fullName>
        </values>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Contacto</fullName>
        </values>
        <values>
            <fullName>Otorgamiento</fullName>
        </values>
        <values>
            <fullName>Precalificación</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inversión Cuenta %2F Mercado Internacional</fullName>
        <description>Todas las etapas para Cuenta Inversión e Mercado Internacional</description>
        <isActive>true</isActive>
        <values>
            <fullName>Calificación</fullName>
        </values>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Contacto</fullName>
        </values>
        <values>
            <fullName>Otorgamiento</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Referido</fullName>
        <description>Oportunidad generica, para referir a banca particular</description>
        <isActive>true</isActive>
        <values>
            <fullName>Precalificación</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Retail Banking</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Calificación</fullName>
        </values>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Contacto</fullName>
        </values>
        <values>
            <fullName>Otorgamiento</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Venta Corta</fullName>
        <description>Venta Corta</description>
        <isActive>true</isActive>
        <values>
            <fullName>Calificación</fullName>
        </values>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Contacto</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accion_de_Venta__c</fullName>
        <label>Tipo de oportunidad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Venta Nuevo Producto</fullName>
                </value>
                <value>
                    <fullName>Venta Nueva Adicional</fullName>
                </value>
                <value>
                    <fullName>Venta Nueva Adicional Plus</fullName>
                </value>
                <value>
                    <fullName>Aumento de Cupo</fullName>
                </value>
                <value>
                    <fullName>Renovación</fullName>
                </value>
                <value>
                    <fullName>Renegociación</fullName>
                </value>
                <value>
                    <fullName>Compra de Cartera</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acepta_propuesta__c</fullName>
        <label>Acepta propuesta?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                    <label>Sí</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pendiente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activacion_de_productos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activación de productos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acuerdo_de_oferta_especial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acuerdo de oferta especial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analista_de_riesgo_asignado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Analista de riesgo asignado</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.LastName</field>
                <operation>contains</operation>
                <value>riesgo</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Antig_edad_de_la_oportunidad__c</fullName>
        <formula>IF(
	OR(
		ISPICKVAL( StageName , &quot;Cerrada Ganada&quot;),
		ISPICKVAL(StageName, &quot;Cerrada Perdida&quot;)
		),
	CloseDate - DATEVALUE(CreatedDate),
        TODAY() - DATEVALUE(CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días de antigüedad de la oportunidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aprobado_Comite__c</fullName>
        <label>Aprobado Comité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPM_Flow_Status_Last_Update__c</fullName>
        <description>Date time of last update of the status field</description>
        <label>BPM Flow Status Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BPM_Flow_Status__c</fullName>
        <description>Updates the status of the BPM flow requested in the provisioning of new Opportunity Products.</description>
        <label>BPM Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Requires Input</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance_and_Statement_of_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo usado para cuenta do tipo Persona Juridica</description>
        <inlineHelpText>Financial Situation</inlineHelpText>
        <label>Balance y Estado de Situación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance_y_E_Situaci_n_vigentes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balance y E.Situación vigentes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bolet_n_comercial__c</fullName>
        <label>Boletín comercial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sin antecedentes</fullName>
                </value>
                <value>
                    <fullName>Con antecedentes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carpeta_a_Ejecutivo_de_Cuentas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carpeta a Ejecutivo de Cuentas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cierre_con_condici_n__c</fullName>
        <label>Cierre con condición</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClienteCompletarFirmarFormulario__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cliente completar y firmar el formulario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comentario_ltima_actividad__c</fullName>
        <label>Comentario última actividad</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comisi_n_de_intermediaci_n__c</fullName>
        <label>Comisión de intermediación</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completar_Articulo_85__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completar Articulo 85</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completar_Solicitude_de_Producto_y_Serv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completar Solicitud de Producto y Serv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completar_y_firmar_formulario_solicitud__c</fullName>
        <defaultValue>false</defaultValue>
        <description>W-000016</description>
        <label>Completar y firmar formulario solicitud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condiciones_del_cierre__c</fullName>
        <label>Condiciones del cierre</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Condiciones_del_negocio__c</fullName>
        <label>Condiciones del negocio</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confecci_n_informe_sub_gcia_riesgo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subgcia evalúa necesidad nuevo informe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contador_de_tareas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contador de tareas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cotiz__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cotizó?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_Profin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Creado de Profin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_EyC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Creado por EyC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_EyC_bank_account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Usado para el proceso de cambio de etapa cuando el lead sólo escoge cuenta corriente. Debe pasar a otorgamiento en oportunidad.</description>
        <label>Creado por EyC CtaCorriente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cumple_requisitos__c</fullName>
        <label>Cumple requisitos?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detalle_resultado_del_contacto__c</fullName>
        <label>Detalle resultado del contacto</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detecci_n_de_otras_oportunidades__c</fullName>
        <label>Detección de otras oportunidades</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Cuenta corriente</fullName>
                </value>
                <value>
                    <fullName>Cursar inversiones</fullName>
                </value>
                <value>
                    <fullName>COMEX</fullName>
                </value>
                <value>
                    <fullName>Cash management</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Factoring</fullName>
                </value>
                <value>
                    <fullName>Mesa de dinero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deuda_SBIF__c</fullName>
        <label>Deuda SBIF últimos 3 meses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sin morosidad</fullName>
                </value>
                <value>
                    <fullName>Con morosidad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deuda_leasing_factoring__c</fullName>
        <label>Deuda leasing/factoring</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sin morosidad</fullName>
                </value>
                <value>
                    <fullName>Con morosidad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docs_sended_to_risk_area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentación enviada a riesgo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documento_enviado_a_corredora_seguros__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documento enviado a corredora seguros</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duracion_de_la_linea__c</fullName>
        <inlineHelpText>indicar la cantidad de meses que dura la línea.</inlineHelpText>
        <label>Duración de la línea</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>No aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EEFF_o_flujo_de_caja__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EEFF o flujo de caja</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_COMEX_notificado__c</fullName>
        <formula>IF(ISPICKVAL( Productos_bancarios__c , &quot;COMEX&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ejecutivo COMEX notificado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Cash_maganement_notificado__c</fullName>
        <formula>IF(ISPICKVAL( Productos_bancarios__c ,&quot;Cash management&quot;),TRUE,FALSE)</formula>
        <label>Ejecutivo Cash maganement notificado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo Cuenta</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Factoring_notificado__c</fullName>
        <formula>IF(ISPICKVAL(Productos_bancarios__c, &quot;Factoring&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ejecutivo Factoring notificado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Inversiones__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo Inversiones</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Leasing_notificado__c</fullName>
        <formula>IF(ISPICKVAL( Productos_bancarios__c , &quot;Leasing&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ejecutivo Leasing notificado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Mesa_de_dinero_notificado__c</fullName>
        <formula>IF(ISPICKVAL( Productos_bancarios__c , &quot;Mesa de dinero&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ejecutivo Mesa de dinero notificado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_especialista_asignado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cuando el ejecutivo de EyC selecciona un producto bancario que requiere un ejecutivo especialista, debe ir a buscarlo en esta lista.</description>
        <label>Nombre ejecutivo especialista</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.LastName</field>
                <operation>contains</operation>
                <value>especialista</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Ejecutivo_Especialista</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_inversiones_notificado__c</fullName>
        <formula>IF(ISPICKVAL( Productos_bancarios__c , &quot;Cursar inversiones&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ejecutivo inversiones notificado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolamiento_Ok__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrolamiento Ok</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnviadoComite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviado a Comité</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enviado_a_crear_cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviado a crear cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enviar_BPM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviar BPM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enviar_sol_desglose_a_gcia_de_cr_dio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviar sol. desglose a gcia. de crédito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipo_de_Op_Creado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sirve como control para process builder &quot;Proceso Enrolamiento&quot;</description>
        <label>Equipo de Op. Creado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estructura__c</fullName>
        <label>Estructura</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Etapa_calificando__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sirve para controlar que no se generen mas tareas cuando se cambia de etapa y se vuelve a &quot;Calificando&quot;.</description>
        <label>Etapa calificando</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FechaAsignacionComite__c</fullName>
        <label>Fecha de asignación a Comité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_asignaci_n_ejecutivo_especialista__c</fullName>
        <label>Fecha asignación ejecutivo especialista</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_cotizaci_n__c</fullName>
        <label>Fecha de cotización</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_env_o_informe__c</fullName>
        <label>Fecha solicitud informe</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_gesti_n_del_contrato__c</fullName>
        <label>Fecha de gestión del contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_gesti_n_del_contrato_leasing__c</fullName>
        <label>Fecha de gestión del contrato leasing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_recepci_n_informe__c</fullName>
        <label>Fecha de recepción informe</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_vencimiento_MAC__c</fullName>
        <label>Fecha de vencimiento MAC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_vencimiento__c</fullName>
        <label>Fecha de vencimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_del_cierre__c</fullName>
        <label>Fecha del cierre</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_del_contacto_con_cliente__c</fullName>
        <label>Fecha del contacto con cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_envio_comite__c</fullName>
        <label>Fecha envío a comité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_estimada_de_cierre__c</fullName>
        <description>Para Empresas y Corporaciones.</description>
        <label>Fecha de cierre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_pronunciamiento_Comit__c</fullName>
        <label>Fecha pronunciamiento Comité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_simulaci_n__c</fullName>
        <label>Fecha simulación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_tentativa_entrea_informe_del__c</fullName>
        <label>Fecha tentativa entrega informe</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_vencimiento_Calificando__c</fullName>
        <defaultValue>CASE( 
MOD( TODAY()- DATE( 1900, 1, 7 ), 7 ), 
1, TODAY() + 5, 
2, TODAY() + 5, 
3, TODAY() + 5, 
4, TODAY() + 5, 
5, TODAY() + 5, 
6, TODAY() + 5, 
TODAY() + 4 
)</defaultValue>
        <label>Fecha vencimiento Calificando</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_vencimiento_p_liza_actual__c</fullName>
        <label>Fecha vencimiento póliza actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_sobre_el_caso__c</fullName>
        <label>Feedback sobre el caso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firma_ok__c</fullName>
        <label>Firma ok</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Folder_delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carpeta Entregada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_of_products_sign_fingerprint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Formulario solicitud de productos, foto, firma y huellas</inlineHelpText>
        <label>Form. de productos, foto, firma y huella</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FuiElCreadorDeLaOportunidad__c</fullName>
        <formula>IF( CreatedById =  $User.Id , &quot;VERDADERO&quot;, &quot;FALSO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FuiElCreadorDeLaOportunidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Garant_as__c</fullName>
        <label>Garantías</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gesti_n_del_contrato__c</fullName>
        <label>Estado de gestión del contrato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visado</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Operaciones</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gesti_n_del_contrato_leasing__c</fullName>
        <label>Gestión del contrato leasing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Operaciones</fullName>
                </value>
                <value>
                    <fullName>Fiscalía</fullName>
                </value>
                <value>
                    <fullName>Notaría</fullName>
                </value>
                <value>
                    <fullName>Firmado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gesti_n_por_analista__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gestión por analista</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gesti_n_por_ejecutivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gestión por ejecutivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gestionar_nuevo_MAC__c</fullName>
        <formula>IF( (Monto_MAC_creado__c -  Monto__c &lt; 0), &quot;Si requiere Nuevo MAC&quot;, &quot;No requiere nuevo MAC&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gestionar nuevo MAC?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INV_InvestmentMade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investment made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INV_InvestmentType__c</fullName>
        <label>Investment type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acciones/Dólares/Renta Fija</fullName>
                </value>
                <value>
                    <fullName>APV</fullName>
                </value>
                <value>
                    <fullName>Fondos Mutuos</fullName>
                </value>
                <value>
                    <fullName>Pershing</fullName>
                </value>
                <value>
                    <fullName>Simultánea/Forward/Venta Corta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INV_ProposalDelivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INV_ProposalRequired__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Este campo controla el campo subetapa. Cuando esta &quot;false&quot;, cambia a etapa &quot;Enrolar&quot;</description>
        <label>Proposal Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indicar_garant_as__c</fullName>
        <label>Indicar garantías</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Informe_recibido_y_revisado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Informe creado y enviado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Informes_legales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Informes legales vigentes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Utilizado al convertir lead AP, para que Opty parta en Etapa Contacto. Esto se controla por ProccesBuilder adhoc</description>
        <label>InvAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inv_AP_Obtencion_firma_FATCA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obtención firma FATCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inv_AP_Obtener_documentos_requeridos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obtención documentos requeridos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inv_AP_Requiere_validacion_subgerente__c</fullName>
        <label>¿Requiere validación subgerente?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>